--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <a href="#">Universities</a>
                             <ul class="dropdown">
                                 <li><a href="elements.html">Partners</a></li>
-                                <li><a href="#">Chandigarh University</a></li>
+                                <li><a href="chardigarh.html">Chandigarh University</a></li>
                                 <li><a href="#">Parul University</a></li>
                                 <li><a href="#">CT University</a></li>
                                 <li><a href="#">Shoolin University</a></li>
