--- a/team.html
+++ b/team.html
@@ -151,14 +151,16 @@
                 <div class="input-group">
                     <div class="input-group-prepend">
                         <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Programs & Studie's</button>
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Programs &
+                            Studie's</button>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="#">Banchelors Degree</a>
                             <a class="dropdown-item" href="#">Masters Degree</a>
                             <a class="dropdown-item" href="#">PHDs</a>
                         </div>
                     </div>
-                    <input type="text" class="form-control border-light" style="padding: 30px 25px;" placeholder="Keyword">
+                    <input type="text" class="form-control border-light" style="padding: 30px 25px;"
+                        placeholder="Keyword">
                     <div class="input-group-append">
                         <button class="btn btn-secondary px-4 px-lg-5">Search</button>
                     </div>
@@ -168,100 +170,61 @@
     </div>
     <!-- Header End -->
 
-    <!-- Team Section -->
-    <!-- Team Start -->
-    <div class="container-fluid py-5">
-        <div class="container py-5">
-            <h1 class="display-4 text-uppercase text-center mb-5">Meet Our Team</h1>
-            <div class="owl-carousel team-carousel position-relative" style="padding-left: 30px;">
-                <div class="team-item rounded overflow-hidden">
-                    <div class="position-relative">
-                        <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
-                        <div class="team-overlay">
-                            <div class="d-flex align-items-center justify-content-start">
-                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+    <div class="untree_co-section bg-light">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-6 mb-4 mb-lg-0 col-lg-4" data-aos="fade-up" data-aos-delay="0">
+                    <div class="staff text-center">
+                        <div class="mb-4"><img src="images/staff_1.jpg" alt="Image" class="img-fluid"></div>
+                        <div class="staff-body">
+                            <h3 class="staff-name">Mina Collins</h3>
+                            <span class="d-block position mb-4">Teacher in Math</span>
+                            <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and
+                                Consonantia, there live the blind texts.</p>
+                            <div class="social">
+                                <a href="#" class="mx-2"><span class="icon-facebook"></span></a>
+                                <a href="#" class="mx-2"><span class="icon-twitter"></span></a>
+                                <a href="#" class="mx-2"><span class="icon-linkedin"></span></a>
                             </div>
                         </div>
-                    </div>
-                    <div class="bg-light text-center p-4">
-                        <h4 class="text-uppercase">John Doe</h4>
-                        <p class="m-0">CEO, Founder</p>
                     </div>
                 </div>
-                <div class="team-item rounded overflow-hidden">
-                    <div class="position-relative">
-                        <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
-                        <div class="team-overlay">
-                            <div class="d-flex align-items-center justify-content-start">
-                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                <div class="col-12 col-sm-6 col-md-6 mb-4 mb-lg-0 col-lg-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="staff text-center">
+                        <div class="mb-4"><img src="images/staff_2.jpg" alt="Image" class="img-fluid"></div>
+                        <div class="staff-body">
+                            <h3 class="staff-name">Anderson Matthew</h3>
+                            <span class="d-block position mb-4">Teacher in Music</span>
+                            <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and
+                                Consonantia, there live the blind texts.</p>
+                            <div class="social">
+                                <a href="#" class="mx-2"><span class="icon-facebook"></span></a>
+                                <a href="#" class="mx-2"><span class="icon-twitter"></span></a>
+                                <a href="#" class="mx-2"><span class="icon-linkedin"></span></a>
                             </div>
                         </div>
-                    </div>
-                    <div class="bg-light text-center p-4">
-                        <h4 class="text-uppercase">Kate Wilson</h4>
-                        <p class="m-0">Designer</p>
                     </div>
                 </div>
-                <div class="team-item rounded overflow-hidden">
-                    <div class="position-relative">
-                        <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
-                        <div class="team-overlay">
-                            <div class="d-flex align-items-center justify-content-start">
-                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                <div class="col-12 col-sm-6 col-md-6 mb-4 mb-lg-0 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="staff text-center">
+                        <div class="mb-4"><img src="images/staff_3.jpg" alt="Image" class="img-fluid"></div>
+                        <div class="staff-body">
+                            <h3 class="staff-name">Cynthia Misso</h3>
+                            <span class="d-block position mb-4">Teacher English</span>
+                            <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and
+                                Consonantia, there live the blind texts.</p>
+                            <div class="social">
+                                <a href="#" class="mx-2"><span class="icon-facebook"></span></a>
+                                <a href="#" class="mx-2"><span class="icon-twitter"></span></a>
+                                <a href="#" class="mx-2"><span class="icon-linkedin"></span></a>
                             </div>
                         </div>
-                    </div>
-                    <div class="bg-light text-center p-4">
-                        <h4 class="text-uppercase">John Brown</h4>
-                        <p class="m-0">Developer</p>
-                    </div>
-                </div>
-                <div class="team-item rounded overflow-hidden">
-                    <div class="position-relative">
-                        <img class="img-fluid w-100" src="img/team-4.jpg" alt="">
-                        <div class="team-overlay">
-                            <div class="d-flex align-items-center justify-content-start">
-                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bg-light text-center p-4">
-                        <h4 class="text-uppercase">Paul Watson</h4>
-                        <p class="m-0">Marketer</p>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Team End -->
-
-    <!-- Call To Action Section -->
-    <!-- Call To Action Start -->
-    <div class="container-fluid py-5">
-        <div class="container py-5">
-            <div class="row align-items-center">
-                <div class="col-md-6">
-                    <h1 class="display-4 text-uppercase">Ready to Learn More?</h1>
-                    <p class="lead">Discover the world of education with Mtendere Education Consult.</p>
-                </div>
-                <div class="col-md-6">
-                    <a class="btn btn-primary btn-lg px-4" href="#">Start Today</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Call To Action End -->
-
-    <!-- Services Section -->
-    <!-- Services Start -->
+    </div> <!-- /.untree_co-section -->
 
     <!-- Footer Start -->
     <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
