--- a/index.html
+++ b/index.html
@@ -138,37 +138,56 @@
         </div>
     </nav>
 
-    <div class="untree_co-hero overlay" style="background-image: url('images/hero-img-1-min.jpg');">
+    <!-- Hero Carousel Section -->
+    <section id="hero" class="position-relative">
+        <div class="owl-carousel hero-carousel">
 
-
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-
-                <div class="col-12">
-
-                    <div class="row justify-content-center ">
-
-                        <div class="col-lg-6 text-center ">
-                            <a href="#" href="https://vimeo.com/342333493" data-fancybox data-aos="fade-up"
-                                data-aos-delay="0" class="caption mb-4 d-inline-block">Watch the video</a>
-
-                            <h1 class="mb-4 heading text-white" data-aos="fade-up" data-aos-delay="100">Education is the
-                                Mother of Leadership</h1>
-                            <p class="mb-0" data-aos="fade-up" data-aos-delay="300"><a href="#"
-                                    class="btn btn-secondary">Explore courses</a></p>
-
-                        </div>
-
-
-                    </div>
-
+            <!-- Slide 1 -->
+            <div class="hero-slide text-white text-center d-flex align-items-center justify-content-center"
+                style="height: 100vh; background: url('your-image.jpg') center center/cover no-repeat;">
+                <div class="container">
+                    <h1 class="display-4 fw-bold">Empowering Dreams. Building Global Futures.</h1>
+                    <p class="lead mb-4">We connect Malawian students with top international universities through expert
+                        guidance and personalized support.</p>
+                    <a href="#contact" class="btn btn-primary me-3">Apply Now</a>
+                    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal"
+                        data-bs-target="#videoModal">
+                        ▶ Watch Video
+                    </button>
                 </div>
+            </div>
 
-            </div> <!-- /.row -->
-        </div> <!-- /.container -->
+            <!-- Slide 2 (Optional, add more as needed) -->
+            <div class="hero-slide text-white text-center d-flex align-items-center justify-content-center"
+                style="height: 100vh; background: url('your-image-2.jpg') center center/cover no-repeat;">
+                <div class="container">
+                    <h1 class="display-5 fw-bold">Scholarships & Visa Support</h1>
+                    <p class="lead mb-4">From choosing the right program to securing funding, Mtendere Education Consult
+                        is with you every step of the way.</p>
+                    <a href="#services" class="btn btn-success">Explore Services</a>
+                </div>
+            </div>
 
-    </div> <!-- /.untree_co-hero -->
+        </div>
+    </section>
 
+    <!-- Video Modal -->
+    <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content bg-dark">
+                <div class="modal-header border-0">
+                    <button type="button" class="btn-close btn-close-white ms-auto" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                </div>
+                <div class="modal-body p-0">
+                    <div class="ratio ratio-16x9">
+                        <iframe id="videoFrame" src="https://www.youtube.com/embed/YOUR_VIDEO_ID?autoplay=1&rel=0"
+                            title="Intro Video" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="untree_co-section">
         <div class="container">
