--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
             <!-- Slide 1 -->
             <div class="hero-slide text-white text-center d-flex align-items-center justify-content-center"
-                style="height: 100vh; background: url('your-image.jpg') center center/cover no-repeat;">
+                style="height: 100vh; background: url('img/full-shot-smiley-students-library.jpg') center center/cover no-repeat;">
                 <div class="container">
                     <h1 class="display-4 fw-bold">Empowering Dreams. Building Global Futures.</h1>
                     <p class="lead mb-4">We connect Malawian students with top international universities through expert
@@ -159,7 +159,7 @@
 
             <!-- Slide 2 (Optional, add more as needed) -->
             <div class="hero-slide text-white text-center d-flex align-items-center justify-content-center"
-                style="height: 100vh; background: url('your-image-2.jpg') center center/cover no-repeat;">
+                style="height: 100vh; background: url('img/study-group-african-people.jpg') center center/cover no-repeat;">
                 <div class="container">
                     <h1 class="display-5 fw-bold">Scholarships & Visa Support</h1>
                     <p class="lead mb-4">From choosing the right program to securing funding, Mtendere Education Consult
