--- a/index.html
+++ b/index.html
@@ -886,6 +886,11 @@
         </div>
     </div>
 
+    <!-- Floating WhatsApp Chat Button -->
+    <a href="https://wa.me/YOURNUMBERHERE" class="whatsapp-float" target="_blank">
+        <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" />
+    </a>
+
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
     <!-- Footer End -->
 
