--- a/index.html
+++ b/index.html
@@ -305,16 +305,18 @@
                 <div class="col-lg-4 mb-5 mb-lg-0">
 
                     <div class="section-title mb-3" data-aos="fade-up" data-aos-delay="0">
-                        <h2 class="line-bottom mb-4">Become an Instructor</h2>
+                        <h2 class="line-bottom mb-4">Our Core Values</h2>
                     </div>
 
-                    <p data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains, far from the
-                        countries Vokalia and Consonantia, there live the blind texts. Separated they live.</p>
+                    <p data-aos="fade-up" data-aos-delay="100">
+                        At Mtendere Education Consult, we are committed to guiding and empowering students in their academic journeys. <br> core values are the foundation of everything we do, ensuring that our services reflect integrity, innovation, and a deep passion for education.
+                    </p>
 
                     <ul class="ul-check list-unstyled mb-5 primary" data-aos="fade-up" data-aos-delay="200">
-                        <li>Behind the word Mountains.</li>
-                        <li>Far far away Mountains.</li>
-                        <li>Large language Ocean.</li>
+                        <li>🌍 Integrity in service.</li>
+                        <li>📚 Educational excellence</li>
+                        <li>🤝 Personalized support</li>
+                        <li>🚀 Empowering communities</li>
                     </ul>
 
                     <p data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary">Get Started</a></p>
@@ -331,13 +333,11 @@
         </div>
     </div>
 
-
-
     <div class="untree_co-section">
         <div class="container">
             <div class="row justify-content-center mb-5">
                 <div class="col-lg-7 text-center" data-aos="fade-up" data-aos-delay="0">
-                    <h2 class="line-bottom text-center mb-4">We Have Best Education</h2>
+                    <h2 class="line-bottom text-center mb-4"></h2>
                     <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
                         live the blind texts.</p>
                 </div>
@@ -627,7 +627,7 @@
         </div>
     </div> <!-- /.untree_co-section -->
 
-    
+
 
     <div class="untree_co-section bg-light">
         <div class="container">
@@ -640,9 +640,9 @@
                             <blockquote class="block-testimonial">
 
                                 <p>
-                                    &ldquo;Far far away, behind the word mountains, far from the countries Vokalia and
-                                    Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right
-                                    at the coast of the Semantics, a large language ocean.&rdquo;</p>
+                                    &ldquo;
+
+                                    &rdquo;</p>
                                 <div class="author">
                                     <img src="images/person_1.jpg" alt="Free template by TemplateUX">
                                     <h3>John Doe</h3>
