--- a/index.html
+++ b/index.html
@@ -36,44 +36,10 @@
                 <div class="row align-items-center">
 
                     <div class="col-6 col-lg-9">
-                        <a href="#" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> <span
+                        <a href="#faq-popup" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> <span
                                 class="d-none d-lg-inline-block">
-                            <!-- Floating Help Icon -->
-                            <div class="help-icon" id="help-icon">
-                                <i class="uil uil-question-circle"></i> Help
-                            </div>
                             
-                            <!-- Pop-up FAQ Section -->
-                            <div id="faq-popup" class="faq-popup">
-                                <div class="faq-popup-content">
-                                <button class="close-btn" id="close-btn">&times;</button>
-                                <h3 class="text-center text-xl font-semibold mb-4">Frequently Asked Questions</h3>
-                                <div class="faq-item">
-                                    <button class="faq-question">What are the scholarship eligibility requirements?</button>
-                                    <div class="faq-answer">
-                                    <p>To be eligible for our scholarships, you need to meet the academic standards of your chosen university, demonstrate financial need, and meet the required language proficiency.</p>
-                                    </div>
-                                </div>
-                                <div class="faq-item">
-                                    <button class="faq-question">How do I know if I qualify for a visa?</button>
-                                    <div class="faq-answer">
-                                    <p>The visa requirements depend on the destination country. We guide you through each country's specific visa requirements to ensure you're fully prepared.</p>
-                                    </div>
-                                </div>
-                                <div class="faq-item">
-                                    <button class="faq-question">Can I apply for multiple scholarships?</button>
-                                    <div class="faq-answer">
-                                    <p>Yes! We recommend applying for multiple scholarships to increase your chances of receiving financial aid.</p>
-                                    </div>
-                                </div>
-                                <div class="faq-item">
-                                    <button class="faq-question">What support services do you offer for students?</button>
-                                    <div class="faq-answer">
-                                    <p>We offer comprehensive support, including visa assistance, accommodation finding, travel planning, and personalized counseling throughout your academic journey.</p>
-                                    </div>
-                                </div>
-                                </div>
-                            </div>
+                            
                             </span></a>
                         <a href="#" class="small mr-3"><span class="icon-phone mr-2"></span> <span
                                 class="d-none d-lg-inline-block">
@@ -1035,6 +1001,38 @@
     <div class="copyrights">
         <div class="container">
             <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
+        </div>
+    </div>
+
+    <!-- Pop-up FAQ Section -->
+    <div id="faq-popup" class="faq-popup">
+        <div class="faq-popup-content">
+        <button class="close-btn" id="close-btn">&times;</button>
+        <h3 class="text-center text-xl font-semibold mb-4">Frequently Asked Questions</h3>
+        <div class="faq-item">
+            <button class="faq-question">What are the scholarship eligibility requirements?</button>
+            <div class="faq-answer">
+            <p>To be eligible for our scholarships, you need to meet the academic standards of your chosen university, demonstrate financial need, and meet the required language proficiency.</p>
+            </div>
+        </div>
+        <div class="faq-item">
+            <button class="faq-question">How do I know if I qualify for a visa?</button>
+            <div class="faq-answer">
+            <p>The visa requirements depend on the destination country. We guide you through each country's specific visa requirements to ensure you're fully prepared.</p>
+            </div>
+        </div>
+        <div class="faq-item">
+            <button class="faq-question">Can I apply for multiple scholarships?</button>
+            <div class="faq-answer">
+            <p>Yes! We recommend applying for multiple scholarships to increase your chances of receiving financial aid.</p>
+            </div>
+        </div>
+        <div class="faq-item">
+            <button class="faq-question">What support services do you offer for students?</button>
+            <div class="faq-answer">
+            <p>We offer comprehensive support, including visa assistance, accommodation finding, travel planning, and personalized counseling throughout your academic journey.</p>
+            </div>
+        </div>
         </div>
     </div>
 
