--- a/index.html
+++ b/index.html
@@ -37,16 +37,13 @@
 
                     <div class="col-6 col-lg-9">
                         <a href="#faq-popup" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> <span
-                                class="d-none d-lg-inline-block">
-                            
-                            
-                            </span></a>
+                            class="d-none d-lg-inline-block">Have a questions?</span></a
                         <a href="#" class="small mr-3"><span class="icon-phone mr-2"></span> <span
                                 class="d-none d-lg-inline-block">
 
                             </span></a>
                         <a href="#" class="small mr-3"><span class="icon-envelope mr-2"></span> <span
-                                class="d-none d-lg-inline-block">info@mydomain.com</span></a>
+                                class="d-none d-lg-inline-block">mtendereeducationconsult@gmail.com</span></a>
                     </div>
 
                     <div class="col-6 col-lg-3 text-right">
