--- a/index.html
+++ b/index.html
@@ -331,6 +331,12 @@
         </div>
     </div>
 
+    <div class="dots">
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+    </div>
+
     <div class="untree_co-section">
         <div class="container">
             <div class="row justify-content-center mb-5">
