--- a/index.html
+++ b/index.html
@@ -1010,37 +1010,37 @@
     <!-- Pop-up FAQ Section -->
     <div id="faq-popup" class="faq-popup">
         <div class="faq-popup-content">
-        <button class="close-btn" id="close-btn">&times;</button>
-        <h3 class="text-center text-xl font-semibold mb-4">Frequently Asked Questions</h3>
-        <div class="faq-item">
-            <button class="faq-question">What are the scholarship eligibility requirements?</button>
-            <div class="faq-answer">
-            <p>To be eligible for our scholarships, you need to meet the academic standards of your chosen university, demonstrate financial need, and meet the required language proficiency.</p>
+            <button class="close-btn" id="close-btn">&times;</button>
+            <h3 class="text-center text-xl font-semibold mb-4">Frequently Asked Questions</h3>
+            <div class="faq-item">
+                <button class="faq-question">What are the scholarship eligibility requirements?</button>
+                <div class="faq-answer">
+                <p>To be eligible for our scholarships, you need to meet the academic standards of your chosen university, demonstrate financial need, and meet the required language proficiency.</p>
+                </div>
             </div>
-        </div>
-        <div class="faq-item">
-            <button class="faq-question">How do I know if I qualify for a visa?</button>
-            <div class="faq-answer">
-            <p>The visa requirements depend on the destination country. We guide you through each country's specific visa requirements to ensure you're fully prepared.</p>
+            <div class="faq-item">
+                <button class="faq-question">How do I know if I qualify for a visa?</button>
+                <div class="faq-answer">
+                <p>The visa requirements depend on the destination country. We guide you through each country's specific visa requirements to ensure you're fully prepared.</p>
+                </div>
             </div>
-        </div>
-        <div class="faq-item">
-            <button class="faq-question">Can I apply for multiple scholarships?</button>
-            <div class="faq-answer">
-            <p>Yes! We recommend applying for multiple scholarships to increase your chances of receiving financial aid.</p>
+            <div class="faq-item">
+                <button class="faq-question">Can I apply for multiple scholarships?</button>
+                <div class="faq-answer">
+                <p>Yes! We recommend applying for multiple scholarships to increase your chances of receiving financial aid.</p>
+                </div>
             </div>
-        </div>
-        <div class="faq-item">
-            <button class="faq-question">What support services do you offer for students?</button>
-            <div class="faq-answer">
-            <p>We offer comprehensive support, including visa assistance, accommodation finding, travel planning, and personalized counseling throughout your academic journey.</p>
+            <div class="faq-item">
+                <button class="faq-question">What support services do you offer for students?</button>
+                <div class="faq-answer">
+                <p>We offer comprehensive support, including visa assistance, accommodation finding, travel planning, and personalized counseling throughout your academic journey.</p>
+                </div>
             </div>
-        </div>
         </div>
     </div>
 
     <!-- Floating WhatsApp Chat Button -->
-    <a href="https://wa.me/YOURNUMBERHERE" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/999431115" class="whatsapp-float" target="_blank">
         <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" />
     </a>
 
