--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="row align-items-center">
 
                     <div class="col-6 col-lg-9">
-                        <a href="#faq-popup" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> <span
+                        <a href="#faq-popup" id="" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> <span
                             class="d-none d-lg-inline-block">Have a questions?</span></a
                         <a href="#" class="small mr-3"><span class="icon-phone mr-2"></span> <span
                                 class="d-none d-lg-inline-block">
