--- a/chardigarh.html
+++ b/chardigarh.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/chardigarh-style.css">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -31,22 +30,20 @@
         <div class="site-mobile-menu-body"></div>
     </div>
 
-
-
     <nav class="site-nav mb-5">
         <div class="pb-2 top-bar mb-3">
             <div class="container">
                 <div class="row align-items-center">
 
                     <div class="col-6 col-lg-9">
-                        <a href="#" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> <span
-                                class="d-none d-lg-inline-block">Have a questions?</span></a>
-                        <a href="#" class="small mr-3"><span class="icon-phone mr-2"></span> <span
-                                class="d-none d-lg-inline-block">
+                        <a href="#faq-popup" id="" class="small mr-3"><span class="icon-question-circle-o mr-2"></span>
+                            <span class="d-none d-lg-inline-block">Have a questions?</span></a <a href="#"
+                            class="small mr-3"><span class="icon-phone mr-2"></span> <span
+                            class="d-none d-lg-inline-block">
 
-                            </span></a>
+                        </span></a>
                         <a href="#" class="small mr-3"><span class="icon-envelope mr-2"></span> <span
-                                class="d-none d-lg-inline-block">info@mydomain.com</span></a>
+                                class="d-none d-lg-inline-block">mtendereeducationconsult@gmail.com</span></a>
                     </div>
 
                     <div class="col-6 col-lg-3 text-right">
@@ -77,7 +74,7 @@
                         <li class="has-children">
                             <a href="#">Universities</a>
                             <ul class="dropdown">
-                                <li><a href="elements.html">Partners</a></li>
+                                <li><a href="#">Partners</a></li>
                                 <li><a href="chardigarh.html">Chandigarh University</a></li>
                                 <li><a href="#">Parul University</a></li>
                                 <li><a href="#">CT University</a></li>
@@ -138,6 +135,58 @@
             </div>
         </div>
     </nav>
+
+
+    <!-- Header Start -->
+    <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;">
+        <div class="container text-center py-5">
+            <h1 class="text-white display-1">Courses</h1>
+            <div class="d-inline-flex text-white mb-5">
+                <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
+                <i class="fa fa-angle-double-right pt-1 px-3"></i>
+                <p class="m-0 text-uppercase">Courses</p>
+            </div>
+
+        </div>
+    </div>
+    <div class="hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-12">
+                    <div class="row justify-content-center ">
+                        <div class="col-lg-6 text-center ">
+                            <h1 class="mb-4 heading text-white" data-aos="fade-up" data-aos-delay="100"></h1>
+                            <div class="mb-5 text-white desc mx-auto" data-aos="fade-up" data-aos-delay="200">
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Courses</button>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Undergraduate Degree</a>
+                                <a class="dropdown-item" href="#">Post-graduate Degree</a>
+                                <a class="dropdown-item" href="#">Masters Degree</a>
+                                <a class="dropdown-item" href="#">Doctoral Degree</a>
+                                <a class="dropdown-item" href="#">PhD Degree</a>
+                            </div>
+                        </div>
+                        <input type="text" class="form-control border-light" style="padding: 30px 25px;"
+                            placeholder="Keyword">
+                        <div class="input-group-append">
+                            <button class="btn btn-secondary px-4 px-lg-5">Search</button>
+                        </div>
+                    </div>
+                </div>
+            </div> <!-- /.row -->
+        </div> <!-- /.container -->
+
+    </div> <!-- /.untree_co-hero -->
+    <!-- Header End -->
 
     <div class="site-content">
         <div class="container">
