--- a/course.html
+++ b/course.html
@@ -36,14 +36,14 @@
                 <div class="row align-items-center">
 
                     <div class="col-6 col-lg-9">
-                        <a href="#" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> <span
-                                class="d-none d-lg-inline-block">Have a questions?</span></a>
+                        <a href="#faq-popup" id="" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> <span
+                            class="d-none d-lg-inline-block">Have a questions?</span></a
                         <a href="#" class="small mr-3"><span class="icon-phone mr-2"></span> <span
                                 class="d-none d-lg-inline-block">
 
                             </span></a>
                         <a href="#" class="small mr-3"><span class="icon-envelope mr-2"></span> <span
-                                class="d-none d-lg-inline-block">info@mydomain.com</span></a>
+                                class="d-none d-lg-inline-block">mtendereeducationconsult@gmail.com</span></a>
                     </div>
 
                     <div class="col-6 col-lg-3 text-right">
@@ -69,12 +69,13 @@
 
                     <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
                         <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="courses.html">Scholarships</a></li>
+                        <li><a href="course.html">Scholarships</a></li>
+                        <li><a href="service.html">Services</a></li>
                         <li class="has-children">
                             <a href="#">Universities</a>
                             <ul class="dropdown">
-                                <li><a href="elements.html">Partners</a></li>
-                                <li><a href="#">Chandigarh University</a></li>
+                                <li><a href="#">Partners</a></li>
+                                <li><a href="chardigarh.html">Chandigarh University</a></li>
                                 <li><a href="#">Parul University</a></li>
                                 <li><a href="#">CT University</a></li>
                                 <li><a href="#">Shoolin University</a></li>
@@ -115,8 +116,8 @@
 
                             </ul>
                         </li>
-                        <li><a href="staff.html">Our Staff</a></li>
-                        <li><a href="news.html">News</a></li>
+                        <li><a href="team.html">Our Staff</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
@@ -145,26 +146,46 @@
                 <i class="fa fa-angle-double-right pt-1 px-3"></i>
                 <p class="m-0 text-uppercase">Courses</p>
             </div>
-            <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Courses</button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Courses 1</a>
-                            <a class="dropdown-item" href="#">Courses 2</a>
-                            <a class="dropdown-item" href="#">Courses 3</a>
-                        </div>
-                    </div>
-                    <input type="text" class="form-control border-light" style="padding: 30px 25px;"
-                        placeholder="Keyword">
-                    <div class="input-group-append">
-                        <button class="btn btn-secondary px-4 px-lg-5">Search</button>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
+    <div class="hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-12">
+                    <div class="row justify-content-center ">
+                        <div class="col-lg-6 text-center ">
+                            <h1 class="mb-4 heading text-white" data-aos="fade-up" data-aos-delay="100"></h1>
+                            <div class="mb-5 text-white desc mx-auto" data-aos="fade-up" data-aos-delay="200">
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Courses</button>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Undergraduate Degree</a>
+                                <a class="dropdown-item" href="#">Post-graduate Degree</a>
+                                <a class="dropdown-item" href="#">Masters Degree</a>
+                                <a class="dropdown-item" href="#">Doctoral Degree</a>
+                                <a class="dropdown-item" href="#">PhD Degree</a>
+                            </div>
+                        </div>
+                        <input type="text" class="form-control border-light" style="padding: 30px 25px;"
+                            placeholder="Keyword">
+                        <div class="input-group-append">
+                            <button class="btn btn-secondary px-4 px-lg-5">Search</button>
+                        </div>
+                    </div>
+                </div>
+            </div> <!-- /.row -->
+        </div> <!-- /.container -->
+
+    </div> <!-- /.untree_co-hero -->
     <!-- Header End -->
 
     <!-- Courses Start -->
