--- a/elements.html
+++ b/elements.html
@@ -138,15 +138,15 @@
     </nav>
   
 
-  <div class="untree_co-hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
+  <div class="hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="col-12">
           <div class="row justify-content-center ">
             <div class="col-lg-6 text-center ">
-              <h1 class="mb-4 heading text-white" data-aos="fade-up" data-aos-delay="100">Elements</h1>
+              <h1 class="mb-4 heading text-white" data-aos="fade-up" data-aos-delay="100"></h1>
               <div class="mb-5 text-white desc mx-auto" data-aos="fade-up" data-aos-delay="200">
-                <p>Another free template by <a href="https://untree.co/" target="_blank" class="link-highlight">Untree.co</a>. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live.</p>
+                <p></p>
               </div>
 
               <p class="mb-0" data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-secondary">Explore courses</a></p>
