--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                     </h2>
                     <p class="text-white h5 mb-4" data-aos="fade-up" data-aos-delay="100">Far far away, behind the word
                         mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p onclick="openForm()"><a href="#" class="btn btn-secondary" data-aos="fade-up"
+                    <p ><a href="#popupFormContainer" class="btn btn-secondary" onclick="openForm()" target="#popupFormContainer" data-aos="fade-up"
                             data-aos-delay="200">Enroll Now</a></p>
                 </div>
             </div>
