--- a/index.html
+++ b/index.html
@@ -1143,8 +1143,10 @@
     <a href="https://wa.me/999431115" class="whatsapp-float" target="_blank">
         <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" />
     </a>
+    
+    <!-- Back to Top Button -->
+    <button id="backToTop" title="Back to top">↑</button>
 
-    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
     <!-- Footer End -->
 
     <script src="js/jquery-3.4.1.min.js"></script>
