--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
                                 class="d-none d-lg-inline-block">mtendereeducationconsult@gmail.com</span></a>
                     </div>
 
+                    <!-- Language Selector -->
+                    <div class="container text-end">
+                        <select class="form-select" id="language-select">
+                        <option value="en">English</option>
+                        <option value="es">Español</option>
+                        <option value="fr">Français</option>
+                        <!-- Add more languages here -->
+                        </select>
+                    </div>
+
                     <div class="col-6 col-lg-3 text-right">
                         <a href="login.html" class="small mr-3">
                             <span class="icon-lock"></span>
@@ -56,6 +66,7 @@
                             Register
                         </a>
                     </div>
+
 
                 </div>
             </div>
@@ -297,6 +308,35 @@
         </div>
     </div>
 
+    <!-- Course Finder Section -->
+    <div class="container my-4">
+        <h4>Find Your Course</h4>
+        <form id="course-filter-form">
+            <div class="row">
+                <div class="col-md-4">
+                    <select class="form-select" id="country-select">
+                        <option value="">Select Country</option>
+                        <option value="us">United States</option>
+                        <option value="uk">United Kingdom</option>
+                        <option value="aus">Australia</option>
+                        <!-- Add more countries here -->
+                    </select>
+                </div>
+                <div class="col-md-4">
+                    <select class="form-select" id="course-level-select">
+                        <option value="">Select Level</option>
+                        <option value="bachelor">Bachelor</option>
+                        <option value="master">Master's</option>
+                        <option value="phd">PhD</option>
+                    </select>
+                </div>
+                <div class="col-md-4">
+                    <button type="submit" class="btn btn-primary w-100">Search</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
     <div class="services-section">
         <div class="container">
             <div class="row justify-content-between">
@@ -422,6 +462,32 @@
 
         </div> <!-- /.container -->
     </div> <!-- /.untree_co-section -->
+
+    <!-- Testimonial Video Carousel -->
+    <div id="testimonial-video-carousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/examplevideo1" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Student Testimonial: Study in UK</h5>
+                    <p>Watch how this student found success studying in the UK!</p>
+                </div>
+            </div>
+            <!-- Repeat for more video items -->
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#testimonial-video-carousel"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#testimonial-video-carousel"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 
     <div class="container mt-12">
         <h2 class="text-3xl font-bold text-center text-blue-800 mb-6">Success Stories</h2>
@@ -1040,7 +1106,17 @@
         </div>
     </div> <!-- /.untree_co-section -->
 
-
+    <!-- Scholarships & Financial Aid Section -->
+    <div class="container my-5">
+        <h4>Scholarships & Financial Aid</h4>
+        <p>Explore various scholarships and financial aid opportunities for students. Apply now to secure your future.
+        </p>
+        <ul class="list-unstyled">
+            <li><a href="scholarship-details.html" class="text-primary">International Scholarship Program</a></li>
+            <li><a href="financial-aid.html" class="text-primary">Financial Aid for Undergraduates</a></li>
+            <li><a href="study-abroad-loans.html" class="text-primary">Study Abroad Loan Assistance</a></li>
+        </ul>
+    </div>
 
     <!-- Footer Start -->
     <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
@@ -1150,6 +1226,13 @@
 
     <!-- Back to Top Button -->
     <button id="backToTop" title="Back to top">↑</button>
+
+    <!-- Chatbot Integration (Placeholder) -->
+    <div class="chatbot-icon">
+        <button class="btn btn-info" id="chatbot-btn">
+            <i class="fas fa-comments"></i> Chat with us!
+        </button>
+    </div>
 
     <!-- Footer End -->
 
