--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <ul class="dropdown">
                                 <li><a href="elements.html">Partners</a></li>
                                 <li><a href="chardigarh.html">Chandigarh University</a></li>
-                                <li><a href="#">Parul University</a></li>
+                                <li><a href="Paruluniversity.html">Parul University</a></li>
                                 <li><a href="#">CT University</a></li>
                                 <li><a href="#">Shoolin University</a></li>
                                 <li><a href="#">Jain University</a></li>
