--- a/index.html
+++ b/index.html
@@ -1238,6 +1238,8 @@
     <script src="js/jquery.sticky.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/custom.js"></script>
+    <script src="js/custom.ts"></script>
+
 
 </body>
 
