--- a/about.html
+++ b/about.html
@@ -150,40 +150,43 @@
   <div class="hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
     <div class="container">
       <div class="row align-items-center justify-content-center">
-        <div class="col-12">
-          <div class="row justify-content-center ">
-            <div class="col-lg-6 text-center ">
-              <h1 class="mb-4 heading text-white" data-aos="fade-up" data-aos-delay="100"></h1>
-              <div class="mb-5 text-white desc mx-auto" data-aos="fade-up" data-aos-delay="200">
-                <p></p>
-              </div>
-            </div>
-          </div>
+        <div class="col-12 text-center text-white">
+          <h1 class="mb-4 heading">Explore Programs</h1>
+          <p class="mb-5 desc mx-auto">Search for available programs across our partner universities.</p>
         </div>
         <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
           <div class="input-group">
-            <div class="input-group-prepend">
-              <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Courses</button>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Undergraduate Degree</a>
-                <a class="dropdown-item" href="#">Post-graduate Degree</a>
-                <a class="dropdown-item" href="#">Masters Degree</a>
-                <a class="dropdown-item" href="#">Doctoral Degree</a>
-                <a class="dropdown-item" href="#">PhD Degree</a>
-              </div>
-            </div>
-            <input type="text" class="form-control border-light" style="padding: 30px 25px;" placeholder="Keyword">
+            <select id="courseType" class="btn btn-outline-light bg-white text-body px-4">
+              <option value="All">All</option>
+              <option value="Undergraduate Degree">Undergraduate Degree</option>
+              <option value="Post-graduate Degree">Post-graduate Degree</option>
+              <option value="Masters Degree">Masters Degree</option>
+              <option value="Doctoral Degree">Doctoral Degree</option>
+              <option value="PhD Degree">PhD Degree</option>
+            </select>
+            <input type="text" id="keyword" class="form-control border-light" placeholder="Keyword" style="padding: 30px 25px;">
             <div class="input-group-append">
-              <button class="btn btn-secondary px-4 px-lg-5">Search</button>
+              <button class="btn btn-secondary px-4 px-lg-5" onclick="searchCourses()">Search</button>
             </div>
           </div>
         </div>
-      </div> <!-- /.row -->
-    </div> <!-- /.container -->
-
-  </div> <!-- /.untree_co-hero -->
+      </div>
+  
+      <!-- Results -->
+      <div class="row justify-content-center" id="searchResults"></div>
+    </div>
+  </div>
   <!-- Header End -->
+
+  <!-- Results Display -->
+  <section id="search-results" class="py-5 bg-light">
+    <div class="container">
+      <h2 class="text-center mb-4">Matching Programs</h2>
+      <div id="resultsContainer" class="row justify-content-center">
+        <!-- Results will appear here -->
+      </div>
+    </div>
+  </section>
 
   <div class="services-section">
     <div class="container">
@@ -553,6 +556,7 @@
   <script src="js/jquery.sticky.js"></script>
   <script src="js/aos.js"></script>
   <script src="js/custom.js"></script>
+  <script src="js/custom.ts"></script>
 
 </body>
 
