--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
 
                     <!-- Language Selector -->
-                    <div class="col-6 col-lg-3 text-right">
+                    <div class="col-6 text-center">
                         <select class="form-select small mr-3"" id=" language-select">
                             <option value="en">English</option>
                             <option value="es">Español</option>
