--- a/about.html
+++ b/about.html
@@ -136,23 +136,16 @@
 
 
   <!-- Header Start -->
-  <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;">
-    <div class="container text-center py-5">
-      <h1 class="text-white display-1">Courses</h1>
-      <div class="d-inline-flex text-white mb-5">
-        <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
-        <i class="fa fa-angle-double-right pt-1 px-3"></i>
-        <p class="m-0 text-uppercase">Courses</p>
-      </div>
-
-    </div>
-  </div>
-  <div class="hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
+  <div class="hero overlay jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="background-image: url('images/img-school-3-min.jpg');">
     <div class="container">
       <div class="row align-items-center justify-content-center">
-        <div class="col-12 text-center text-white">
-          <h1 class="mb-4 heading">Explore Programs</h1>
-          <p class="mb-5 desc mx-auto">Search for available programs across our partner universities.</p>
+        <div class="container text-center py-5">
+          <h1 class="text-white display-1">Courses</h1>
+          <div class="d-inline-flex text-white mb-5">
+            <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
+            <i class="fa fa-angle-double-right pt-1 px-3"></i>
+            <p class="m-0 text-uppercase">Courses</p>
+          </div>
         </div>
         <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
           <div class="input-group">
@@ -173,20 +166,23 @@
       </div>
   
       <!-- Results -->
-      <div class="row justify-content-center" id="searchResults"></div>
+      <div class="row justify-content-center" id="searchResults">
+        <!-- Results Display -->
+        <section id="search-results" class="py-5 bg-light">
+          <div class="container">
+            <h2 class="text-center mb-4">Matching Programs</h2>
+            <div id="resultsContainer" class="row justify-content-center">
+              <!-- Results will appear here -->
+              
+            </div>
+          </div>
+        </section>
+      </div>
     </div>
   </div>
   <!-- Header End -->
 
-  <!-- Results Display -->
-  <section id="search-results" class="py-5 bg-light">
-    <div class="container">
-      <h2 class="text-center mb-4">Matching Programs</h2>
-      <div id="resultsContainer" class="row justify-content-center">
-        <!-- Results will appear here -->
-      </div>
-    </div>
-  </section>
+  
 
   <div class="services-section">
     <div class="container">
