--- a/about.html
+++ b/about.html
@@ -136,7 +136,8 @@
 
 
   <!-- Header Start -->
-  <div class="hero overlay jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="background-image: url('images/img-school-3-min.jpg');">
+  <div class="hero overlay jumbotron jumbotron-fluid page-header position-relative overlay-bottom"
+    style="background-image: url('images/img-school-3-min.jpg');">
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="container text-center py-5">
@@ -157,14 +158,15 @@
               <option value="Doctoral Degree">Doctoral Degree</option>
               <option value="PhD Degree">PhD Degree</option>
             </select>
-            <input type="text" id="keyword" class="form-control border-light" placeholder="Keyword" style="padding: 30px 25px;">
+            <input type="text" id="keyword" class="form-control border-light" placeholder="Keyword"
+              style="padding: 30px 25px;">
             <div class="input-group-append">
               <button class="btn btn-secondary px-4 px-lg-5" onclick="searchCourses()">Search</button>
             </div>
           </div>
         </div>
       </div>
-  
+
       <!-- Results -->
       <div class="row justify-content-center" id="searchResults">
         <!-- Results Display -->
@@ -173,7 +175,7 @@
             <h2 class="text-center mb-4">Matching Programs</h2>
             <div id="resultsContainer" class="row justify-content-center">
               <!-- Results will appear here -->
-              
+
             </div>
           </div>
         </section>
@@ -182,7 +184,7 @@
   </div>
   <!-- Header End -->
 
-  
+
 
   <div class="services-section">
     <div class="container">
